--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 html {
     height: 100%;
@@ -58,7 +57,11 @@ body {
     border: 1px solid black !important;
 }
 
-/* -------------------------------- Media Queries */
+.bg-black {
+    background: #000 !important;
+}
+
+/* --------------------------------- Media queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
