--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,8 +13,8 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    New products for you to step on for
+                <h1 class="display-6 logo-font text-black">
+                    Super quality rubber mats from the land of natural latex
                 </h1>
                 <div class="my-5">
                     <h4>
