--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/home_background_1.jpg') no-repeat center center fixed;
+    background: url('/media/home_background_2.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -106,6 +106,25 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/* Footer */
+footer {
+    padding: 8px;
+    background-color: #4d4140 !important ;
+    color: #f8f9fa;
+    text-align: center;
+    position: absolute; 
+    left: 0 ; right: 0; bottom: 0; 
+    height:[footer-height] 
+  }
+  .social {
+    font-size: 1.5rem;
+    padding: 4px;
+    color: #f8f9fa;
+  }
+  .social:hover {
+    color: #9e2a2b;
+  }
+  
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
