--- a/templates/base.html
+++ b/templates/base.html
@@ -138,6 +138,8 @@
     {% block content %}
     {% endblock %}
 
+    {% include 'includes/footer.html' %}
+    
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
