--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="container-fluid footer-container">
+<footer class="container-fluid footer-container" style="position: relative;">
 	<div class="row">
 		<div class="col">
 			<p>Site develped by Baiju Abraham</p>
@@ -10,6 +10,9 @@
             </a>
 	        <a href="https://github.com/baijuka" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github social"></i>
+            </a>
+			<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-facebook social"></i>
             </a>
 		</div>
 		<div class="col">
