--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,7 +29,7 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
                     <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                    <p class="lead mb-0 text-left font-weight-bold" id="p_price">£{{ product.productvariation_set.first.product_price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -52,7 +52,7 @@
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
-                            {% with product.has_sizes as s %}
+                            <!-- {% with product.has_sizes as s %}
                             {% if s %}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
@@ -64,7 +64,17 @@
                                         <option value="xl">XL</option>
                                     </select>
                                 </div>
-                            {% endif %}
+                            {% endif %} -->
+                            <div class="col-12"></div>
+                                <p><strong>Size:</strong></p>
+                                {%if product.productvariation_set.all %}
+                                <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
+                                {% for psize in product.productvariation_set.all %}
+                                    <option value='{{ psize.product_size }}'>{{ psize.product_size }}</option>
+                                {% endfor %}
+                                </select>
+                                {% endif %}
+                            </div>
                             <div class="col-12">
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
