--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -102,8 +102,8 @@
     </div>
 {% endblock %}
 
-{% block postloadjs %}
-    <script src="{% static 'js/price.js' %}" />
+{% block postloadjs %}  
 {{ block.super }}   
+    <script src="{% static 'js/price.js' %}" ></script>
 {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
