Updated add product functionality

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -32,6 +32,13 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
+                    {% for field in variation_form %}
+                        {% if field.name != 'image' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
