--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -1,3 +1,4 @@
+<!-- Credit: This page has used the code from https://www.brennantymrak.com/articles/django-dynamic-formsets-javascript  and has changed to fit the purpose of this site-->
 {% extends "base.html" %}
 {% load static %}
 
@@ -70,14 +71,12 @@
         function addForm(e) {
         e.preventDefault()
 
-        let newForm = variationForm[0].cloneNode(true) //Clone the bird form
-        let formRegex = RegExp(`form-(\\d){1}-`,'g') //Regex to find all instances of the form number
-
-        formNum++ //Increment the form number
-        newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`) //Update the new form to have the correct form number
-        container.insertBefore(newForm, addButton) //Insert the new form at the end of the list of forms
-
-        totalForms.setAttribute('value', `${formNum+1}`) //Increment the number of total forms in the management form
+        let newForm = variationForm[0].cloneNode(true) 
+        let formRegex = RegExp(`form-(\\d){1}-`,'g') 
+        formNum++ 
+        newForm.innerHTML = newForm.innerHTML.replace(formRegex, `form-${formNum}-`) 
+        container.insertBefore(newForm, addButton) 
+        totalForms.setAttribute('value', `${formNum+1}`) 
         }
        
     </script>
