Updated edit prduct functionality

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -32,6 +32,13 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
+                    <h5 class="text-muted">Product Variatons</h5>
+                    {{ formset.management_form }}
+                    {% for form in formset %}
+                    <div class='variation-form' style="border-bottom:black 1px solid; margin-bottom: 5px;">
+                        {{ form |crispy }}
+                    </div>
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
