--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -102,7 +102,44 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">                           
                         </div>
                     </form>
+                    </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+                <h4>Reviews</h4>
+                {% for review in reviews %}
+                <article class="box mb-3">
+                    <div class="icontext w-100">
+                        <div class="text">
+                            <span class="date text-muted float-md-right">Updated on: {{review.updated_at}} </span>
+                            <h6 class="mb-1">{{ review.user_profile }} </h6>
+                            <div class="rating-star">
+                                <span style="color: #f8d50f;">
+                                    <i class="fa fa-star{% if review.rating < 1 %}-o {% endif %}" aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if review.rating < 2 %}-o {% endif %}" aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if review.rating < 3 %}-o {% endif %}" aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if review.rating < 4 %}-o {% endif %}" aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if review.rating < 5 %}-o {% endif %}" aria-hidden="true"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </div> 
+                    <div class="mt-3">
+                        <h6 style="font-weight: bold;">{{review.subject}}</h6>
+                        <p>
+                            {{review.review}}
+                        </p>
+                    </div>
+                </article>
+                {% endfor %}
+                {% if request.user.is_authenticated %}
+                <div class="row">
+                    <a href="{% url 'add_review' product.id %}" class="btn btn-outline-black rounded-0 mt-5" style="margin-bottom:;">
+                        <span class="text-uppercase">Write Your Review</span>
+                    </a>
                 </div>
+                {% endif %}               
             </div>
         </div>
     </div>
