--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -37,8 +37,8 @@
                         </a>
                     </p>
                     {% endif %}
-                    {% if product.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                    {% if product.avaregereview > 0 %}
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.avaregereview |stringformat:".2f" }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
@@ -134,8 +134,8 @@
                 </article>
                 {% endfor %}
                 {% if request.user.is_authenticated %}
-                <div class="row">
-                    <a href="{% url 'add_review' product.id %}" class="btn btn-outline-black rounded-0 mt-5" style="margin-bottom:;">
+                <div class="row" style="margin-bottom: 20px;">
+                    <a href="{% url 'add_review' product.id %}" class="btn btn-secondary rounded-0 mt-5" style="margin-bottom:;">
                         <span class="text-uppercase">Write Your Review</span>
                     </a>
                 </div>
