--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -77,8 +77,8 @@
                                                 </a>
                                             </p>
                                             {% endif %}
-                                            {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                            {% if product.avaregereview > 0 %}
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.avaregereview |stringformat:".2f" }} / 5</small>
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
