--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -136,7 +136,7 @@
                 {% if request.user.is_authenticated %}
                 <div class="row" style="margin-bottom: 20px;">
                     <a href="{% url 'add_review' product.id %}" class="btn btn-secondary rounded-0 mt-5" style="margin-bottom:;">
-                        <span class="text-uppercase">Write Your Review</span>
+                        <span class="text-uppercase">Rate and Review This Product</span>
                     </a>
                 </div>
                 {% endif %}               
