--- a/products/templates/products/add_review.html
+++ b/products/templates/products/add_review.html
@@ -31,7 +31,7 @@
                             {% if product.image %}
                                 <img src="{{  product.image.url }}" alt="Product Image" style="width: 100px; height: auto;">
                             {% else %}
-                                <img src="/media/noimage.png" alt="Product Image" style="width: 100px; height: auto;">
+                                <img src="{{ MEDIA_URL }}noimage.png" alt="Product Image" style="width: 100px; height: auto;">
                             {% endif %}
                         </div>
 
