--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="container-fluid footer-container" style="position: relative;">
+<footer class="container-fluid footer-container">
 	<div class="row">
 		<div class="col">
 			<p>Site develped by Baiju Abraham</p>
